--- a/index.html
+++ b/index.html
@@ -467,5 +467,30 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button type="button" class="close-btn"></button>
+        <p class="text-modal">Leave your contacts and we will call you back</p>
+        <form class="form-modal">
+          <label for="user-name" class="label-modal">Name</label>
+          <input
+            type="text"
+            name="user-name"
+            id="user-name"
+            class="modal-input"
+          />
+          <label for="user-tel" class="label-modal">Phone</label>
+          <input type="tel" name="user-tel" id="user-tel" class="modal-input" />
+          <label for="user-email" class="label-modal">Email</label>
+          <input
+            type="email"
+            name="user-email"
+            id="user-email"
+            class="modal-input"
+          />
+        </form>
+        <button type="submit" class="btn-modal-submit">Send</button>
+      </div>
+    </div>
   </body>
 </html>
