--- a/index.html
+++ b/index.html
@@ -465,31 +465,98 @@
             </li>
           </ul>
         </div>
+        <div class="footer-bloc-input">
+          <p class="footer-text-link">Subscribe</p>
+          <div class="footer-input-element">
+            <input
+              type="email"
+              name="email-footer"
+              placeholder="E-mail"
+              class="input-footer"
+            />
+            <button type="submit" class="footer-btn">
+              Subscribe
+              <svg width="24" height="24" class="icon-btn-footer">
+                <use href="./images/icons.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
     <div class="backdrop">
       <div class="modal">
-        <button type="button" class="close-btn"></button>
+        <button type="button" class="close-btn">
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
         <p class="text-modal">Leave your contacts and we will call you back</p>
         <form class="form-modal">
-          <label for="user-name" class="label-modal">Name</label>
+          <div class="modal-fill">
+            <label for="user-name" class="label-modal">Name</label>
+            <div class="modal-input-wrap">
+              <input
+                type="text"
+                name="user-name"
+                id="user-name"
+                class="modal-input"
+              />
+              <svg width="18" height="24" class="modal-icons">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-fill">
+            <label for="user-tel" class="label-modal">Phone</label>
+            <div class="modal-input-wrap">
+              <input
+                type="tel"
+                name="user-tel"
+                id="user-tel"
+                class="modal-input"
+              />
+              <svg width="18" height="24" class="modal-icons">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-fill">
+            <label for="user-email" class="label-modal">Email</label>
+            <div class="modal-input-wrap">
+              <input
+                type="email"
+                name="user-email"
+                id="user-email"
+                class="modal-input"
+              />
+              <svg width="18" height="24" class="modal-icons">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-fill">
+            <label for="user-comment" class="label-modal">Comment</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              class="textarea-modal"
+              placeholder="Text input"
+            ></textarea>
+          </div>
           <input
-            type="text"
-            name="user-name"
-            id="user-name"
-            class="modal-input"
+            type="checkbox"
+            name="privacy"
+            id="privacy"
+            required
+            class="modal-check"
           />
-          <label for="user-tel" class="label-modal">Phone</label>
-          <input type="tel" name="user-tel" id="user-tel" class="modal-input" />
-          <label for="user-email" class="label-modal">Email</label>
-          <input
-            type="email"
-            name="user-email"
-            id="user-email"
-            class="modal-input"
-          />
+          <label for="privacy" class="check-text"
+            ><span></span>I accept the terms and conditions of the
+            <a href="" class="check-link">Privacy Policy</a></label
+          >
+          <button type="submit" class="btn-modal-submit">Send</button>
         </form>
-        <button type="submit" class="btn-modal-submit">Send</button>
       </div>
     </div>
   </body>
