--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="close-btn">
           <svg class="close-icon" width="8" height="8">
@@ -544,9 +544,6 @@
               placeholder="Text input"
             ></textarea>
           </div>
-
-          <!-- checkboks -->
-
           <input
             type="checkbox"
             name="privacy"
@@ -561,8 +558,6 @@
             >I accept the terms and conditions of the
             <a href="" class="check-link">Privacy Policy</a></label
           >
-
-          <!-- button -->
           <button type="submit" class="btn-modal-submit">Send</button>
         </form>
       </div>
