--- a/index.html
+++ b/index.html
@@ -468,12 +468,14 @@
         <div class="footer-bloc-input">
           <p class="footer-text-link">Subscribe</p>
           <form class="footer-input-element">
-            <input
-              type="email"
-              name="email-footer"
-              placeholder="E-mail"
-              class="input-footer"
-            />
+            <label for="" class="label-footer">
+              <input
+                type="email"
+                name="email-footer"
+                placeholder="E-mail"
+                class="input-footer"
+              />
+            </label>
             <button type="submit" class="footer-btn">
               Subscribe
               <svg width="24" height="24" class="icon-btn-footer">
