--- a/index.html
+++ b/index.html
@@ -468,11 +468,12 @@
         <div class="footer-bloc-input">
           <p class="footer-text-link">Subscribe</p>
           <form class="footer-input-element">
-            <label for="" class="label-footer">
+            <label for="email-footer" class="label-footer">
               <input
                 type="email"
                 name="email-footer"
                 placeholder="E-mail"
+                id="email-footer"
                 class="input-footer"
               />
             </label>
@@ -486,7 +487,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="close-btn">
           <svg class="close-icon" width="8" height="8">
@@ -546,20 +547,23 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <input
-            type="checkbox"
-            name="privacy"
-            id="privacy"
-            required
-            class="modal-check visually-hidden"
-          />
-          <label for="privacy" class="check-text"
-            ><span class="check-text-icon">
-              <svg width="10" height="8" class="vector-icon">
-                <use href="./images/icons.svg#icon-vector"></use></svg></span
-            >I accept the terms and conditions of the
-            <a href="" class="check-link">Privacy Policy</a></label
-          >
+          <div class="checkbox-container">
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+              required
+              class="modal-check visually-hidden"
+            />
+            <label for="user-privacy" class="check-text"
+              ><span class="check-text-icon">
+                <svg width="10" height="8" class="vector-icon">
+                  <use href="./images/icons.svg#icon-vector"></use></svg></span
+              >I accept the terms and conditions of the
+              <a href="" class="check-link">Privacy Policy</a></label
+            >
+          </div>
           <button type="submit" class="btn-modal-submit">Send</button>
         </form>
       </div>
