--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-fill">
+          <div class="modal-fill-four">
             <label for="user-comment" class="label-modal">Comment</label>
             <textarea
               name="user-comment"
